--- a/demo/index.html
+++ b/demo/index.html
@@ -297,5 +297,7 @@ Just tap <span class="up-icon"></span> then 'Add to Home Screen'
 <script type="text/javascript" src="static/assets/js/view/prototype.js"></script>
 
 <script type='text/javascript' src='data.js'></script>
+<!--analytics-->
+<script src="http://tutsplus.github.io/github-analytics/ga-tracking.min.js"></script>
 </body>
 </html>
